<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context="com.example.psydrw.mdp_cw1.BrushSelection">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/set_brush_type"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/roundToggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:onClick="onRoundToggleClick"
            android:textOff="@string/round"
            android:textOn="@string/round" />

        <ToggleButton
            android:id="@+id/squareToggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:onClick="onSquareToggleClick"
            android:textOff="@string/square"
            android:textOn="@string/square" />

        <ToggleButton
            android:id="@+id/buttButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:onClick="onButtToggleClick"
            android:textOff="Butt"
            android:textOn="@string/square" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="20"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/brushWidthTag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="Brush Width" />

        <SeekBar
            android:id="@+id/widthBar"
            style="@android:style/Widget.Material.SeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="500"
            android:progress="1"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
        android:id="@+id/Return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="returnMain"
        android:text="Done" />


</LinearLayout>


</LinearLayout>
